// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/AppViewRouter does not try to retrieve a profile when moving from from-addon to public 1`] = `<profile-viewer />`;

exports[`app/AppViewRouter renders an home when the user pressed back after an error 1`] = `
<div
  class="rootMessageContainer"
>
  <div
    class="rootMessage"
  >
    <h1
      class="rootMessageTitle"
    >
      Firefox Profiler
    </h1>
    <div
      class="rootMessageText"
    >
      Could not download the profile.
    </div>
    <div
      class="rootMessageAdditional"
    >
      <p>
        Error: Error while loading profile
      </p>
      <p>
        The full stack has been written to the Web Console.
      </p>
      <a
        href="/"
      >
        Back to home
      </a>
    </div>
  </div>
</div>
`;

exports[`app/AppViewRouter renders an home when the user pressed back after an error 2`] = `<home />`;

exports[`app/AppViewRouter renders an initial home 1`] = `<home />`;

exports[`app/AppViewRouter renders temporary errors 1`] = `
<div
  class="rootMessageContainer"
>
  <div
    class="rootMessage"
  >
    <h1
      class="rootMessageTitle"
    >
      Firefox Profiler
    </h1>
    <div
      class="rootMessageText"
    >
      Downloading and processing the profile...
    </div>
    <div
      class="rootMessageAdditional"
    >
      <p>
        This is a temporary error, wait a bit more.
      </p>
      <p>
        Tried 3 times out of 10.
      </p>
      <a
        href="/"
      >
        Back to home
      </a>
    </div>
    <div
      class="loading"
    >
      <div
        class="loading-div loading-div-1 loading-row-1"
      />
      <div
        class="loading-div loading-div-2 loading-row-2"
      />
      <div
        class="loading-div loading-div-3 loading-row-3"
      />
      <div
        class="loading-div loading-div-4 loading-row-3"
      />
      <div
        class="loading-div loading-div-5 loading-row-4"
      />
      <div
        class="loading-div loading-div-6 loading-row-4"
      />
      <div
        class="loading-div loading-div-7 loading-row-4"
      />
      <div
        class="loading-div loading-div-8 loading-row-4"
      />
      <div
        class="loading-div loading-div-9 loading-row-4"
      />
      <div
        class="loading-div loading-div-10 loading-row-4"
      />
    </div>
  </div>
</div>
`;

exports[`app/AppViewRouter renders the addon loading page, and the profile view after capturing 1`] = `
<div
  class="rootMessageContainer"
>
  <div
    class="rootMessage"
  >
    <h1
      class="rootMessageTitle"
    >
      Firefox Profiler
    </h1>
    <div
      class="rootMessageText"
    >
      Importing the profile directly from Firefox...
    </div>
    <div
      class="loading"
    >
      <div
        class="loading-div loading-div-1 loading-row-1"
      />
      <div
        class="loading-div loading-div-2 loading-row-2"
      />
      <div
        class="loading-div loading-div-3 loading-row-3"
      />
      <div
        class="loading-div loading-div-4 loading-row-3"
      />
      <div
        class="loading-div loading-div-5 loading-row-4"
      />
      <div
        class="loading-div loading-div-6 loading-row-4"
      />
      <div
        class="loading-div loading-div-7 loading-row-4"
      />
      <div
        class="loading-div loading-div-8 loading-row-4"
      />
      <div
        class="loading-div loading-div-9 loading-row-4"
      />
      <div
        class="loading-div loading-div-10 loading-row-4"
      />
    </div>
  </div>
</div>
`;

exports[`app/AppViewRouter renders the addon loading page, and the profile view after capturing 2`] = `<profile-viewer />`;

exports[`app/AppViewRouter renders the profile view 1`] = `
<div
  class="rootMessageContainer"
>
  <div
    class="rootMessage"
  >
    <h1
      class="rootMessageTitle"
    >
      Firefox Profiler
    </h1>
    <div
      class="rootMessageText"
    >
      Downloading and processing the profile...
    </div>
    <div
      class="loading"
    >
      <div
        class="loading-div loading-div-1 loading-row-1"
      />
      <div
        class="loading-div loading-div-2 loading-row-2"
      />
      <div
        class="loading-div loading-div-3 loading-row-3"
      />
      <div
        class="loading-div loading-div-4 loading-row-3"
      />
      <div
        class="loading-div loading-div-5 loading-row-4"
      />
      <div
        class="loading-div loading-div-6 loading-row-4"
      />
      <div
        class="loading-div loading-div-7 loading-row-4"
      />
      <div
        class="loading-div loading-div-8 loading-row-4"
      />
      <div
        class="loading-div loading-div-9 loading-row-4"
      />
      <div
        class="loading-div loading-div-10 loading-row-4"
      />
    </div>
  </div>
</div>
`;

exports[`app/AppViewRouter renders the profile view 2`] = `<profile-viewer />`;
